--- a/res/layout/main_bottom.xml
+++ b/res/layout/main_bottom.xml
@@ -40,7 +40,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/main_bottom_leida"
+        android:id="@+id/main_bottom_radar"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -48,7 +48,7 @@
         android:orientation="vertical" >
 
         <ImageButton
-            android:id="@+id/main_bottom_leida_imgbtn"
+            android:id="@+id/main_bottom_radar_imgbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00000000"
