--- a/res/layout/layout_setting.xml
+++ b/res/layout/layout_setting.xml
@@ -3,12 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="设置"
-        />
-    
+
+    <TextView
+        android:id="@+id/setting_setprot"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center_vertical"
+        android:text="@string/Setting_textview"
+        android:textColor="@android:color/white"
+        android:textSize="26sp" />
 
 </LinearLayout>
