--- a/res/layout/layout_wifi_gplot.xml
+++ b/res/layout/layout_wifi_gplot.xml
@@ -3,13 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="WIFI拓扑图"
-        />
-    
+
+    <ListView
+        android:id="@+id/wifi_gplot_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </ListView>
 
 </LinearLayout>
