--- a/res/layout/layout_wifi_location.xml
+++ b/res/layout/layout_wifi_location.xml
@@ -7,19 +7,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="信号强度："
-        android:textSize="30sp" />
+        android:text="使用须知：请移动您的位置。"
+        android:singleLine="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/wifi_location_strength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp" />
-
-    <ImageView
-        android:id="@+id/wifi_location_strengthimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/left_menu_gplot_white_1" />
 
 </LinearLayout>
