opt(App): 新增底部按钮图标
1.新增蓝牙图标。
2.新增WiFi图标。

PCode: main

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_wifi"
-        android:title="@string/tab_wifi" />
+        android:id="@+id/nav_bluetooth"
+        android:icon="@drawable/ic_bt"
+        android:title="@string/tab_bluetooth" />
 
     <item
-        android:id="@+id/nav_bluetooth"
-        android:title="@string/tab_bluetooth" />
+        android:id="@+id/nav_wifi"
+        android:icon="@drawable/ic_wifi"
+        android:title="@string/tab_wifi" />
 
 </menu>
